<?xml version="1.0"?>
<package>
  <name>nimbro_primitive_fitter</name>
  <version>0.1.0</version>
  <description>This package fits primitive shapes to complex meshes to reduce computational complexity in simulation and planning tasks.</description>

  <maintainer email="brandenburger@dismail.de">André Brandenburger</maintainer>
  <maintainer email="rodriguez@ais.uni-bonn.de">Diego Rodriguez</maintainer>

  <license>BSD</license>
  
  <build_depend>cmake_modules</build_depend>
  <run_depend>roslib</run_depend>
  <build_depend>roslib</build_depend>
  <run_depend>rosparam</run_depend>
  <build_depend>rosparam</build_depend>
  <run_depend>rospack</run_depend>
  <build_depend>rospack</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>roscpp</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
